--- a/打印pdf 文件/打印pdf 文件.csproj
+++ b/打印pdf 文件/打印pdf 文件.csproj
@@ -77,5 +77,9 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Spire.License.dll" />
+    <Content Include="Spire.Pdf.dll" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
